<resources>
    <string name="app_name">Proximity Reminder</string>
    <string name="title_activity_reminder_writer">ReminderWriterActivity</string>

    <string name="android_key">AIzaSyDCMEn5Z-3ZEWbXAW-EiOZcU_kCuuL9ZRI</string>>
    <string name="mps_key">AIzaSyDaXc7EHoskuwiT-oUnptOjxEnv1j2ZgeA</string>
    <string name="google_client_id">287612224122-k40vqn979vou2kcuj70o0rbrq10f0cvs.apps.googleusercontent.com</string>
    <string name="google_web_id">287612224122-o1hbptnfh3k5366rlne9dv6fs3mqmu85.apps.googleusercontent.com</string>

    <string name="location_required_error">Location required</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="action_settings">Settings</string>
    <string name="dark_settings_label">Dark Mode</string>

    <string name="action_account">Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="account_label">I am not going to abuse your account</string>
    <string name="account_explanation">Signing into your google account allows Reminders to be saved on the cloud and accessed on other devices.</string>

    <string name="new_reminder_button">New Reminder</string>
    <string name="save_reminder_label">Save</string>
    <string name="confirm_delete">Delete reminder?</string>
    <string name="delete_dialog_title">Confirm deletion</string>

    <string name="reminder_notif_channel_name">GeofenceChannel</string>
    <string name="reminder_notif_channel_description">You have entered a proximity radius</string>
    <string name="geofence_entered">Within radius of %1$s, %2$s</string>

    <string name="default_item_condition">Within xkm of North Pole</string>
    <string name="default_item_note">Plant a flag</string>

    <string name="delete_reminder_label">Delete</string>
    <string name="prompt_label">Your reminder</string>
    <string name="radius_label">Radius (km)</string>
    <string name="name_label">Location Name (optional)</string>
    <string name="longitude_label">Longitude: %1$f</string>
    <string name="latitude_label">Latitude: %1$f</string>
    <string name="location_label">Set Location</string>


</resources>